[package]
name = "git-ops"
version = "0.1.0"
authors = ["Jonathan Fok kan <jfokkan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.17"
clap = "3.0.0-beta.2"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false } 
actix-web = { version = "3", features = ["logger"] }
serde = "1"
serde_json = "1"
parking_lot = "0.11"
thiserror = "1"
slog = { version = "2.7" }
slog-term = "2.8"
slog-async = "2.6"
slog-stdlog = "4.1"